/* $Id: ChangeLog,v 1.1481 2001-06-05 08:38:53 sandervl Exp $ */

 2001-06-05: Sander van Leeuwen <sandervl@xs4all.nl>
    - COMCTL32: o Listview: Don't repaint subitem if changed text is the same as old one.
                  (fixes endless repainting loop in WinRAR 2.80)

 2001-06-04: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Added driver dll plugin for custom device driver emulation
                  Enumerates keys in HKEY_LOCAL_MACHINE\System\CurrentControlSet\Services
                  that contain 'DllName' keys.
                  DllName contains the name of the plugin dll that exports
                  DrvOpen, DrvClose & DrvIOCtl.
                o Dispatch breakpoint exception to application (release build only)
                  Some nasty applications expect this.

 2001-06-03: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Ported & fixed ScrollDC (Wine)
                  (fixes scrolling in Adobe Framemaker 5.5)
    - GDI32:    o RGB 565->555 conversion in GetDIBits
                o RGB 555->565 conversion in DIB Section sync
                o Sync DIB section in RealizePalette if any colors changed
                  (fixes PowerDVD colors)

 2001-06-02: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - Win32k/configure.cmd:
                o Corrected search for the VAC compiler.
                o Removed stupid messages when -w is specified.

 2001-06-02: Achim Hasenmueller <achimha@innotek.de>
    - COMDLG32: o fix crash due to uninitialized COM object pointer in
                  Win95 open file dialog browse mode
                o default to open mode in file dialog when the
                  OFN_NOVALIDATE mode is used
                  (fixes crash in FrameMaker 5.5 file dialog when opening
                   a file that has broken image references)
    - KERNEL32: o log both error and no error conditions for GetLastError
                  with default error level. Sometimes, we don't set an error